--- a/404.html
+++ b/404.html
@@ -149,7 +149,7 @@
               <a href="/diety/">Диеты</a>
             </li>
 <li class="masthead__menu-item">
-              <a href="/collection-archive/">Sample Collections</a>
+              <a href="/faktory/">Восстановление здоровья</a>
             </li>
 <li class="masthead__menu-item">
               <a href="/legal/terms/">Условия и политика конфиденциальности</a>
