--- a/index.html
+++ b/index.html
@@ -132,7 +132,14 @@
 </script>
 <noscript><div><img src="https://mc.yandex.ru/watch/53981818" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
 <!-- /Yandex.Metrika counter -->
-<!-- insert favicons. use https://realfavicongenerator.net/ -->
+<link rel="apple-touch-icon" sizes="180x180" href="/assets/images/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicon-16x16.png">
+<link rel="manifest" href="/assets/images/site.webmanifest">
+<link rel="mask-icon" href="/assets/images/safari-pinned-tab.svg" color="#5bbad5">
+<meta name="msapplication-TileColor" content="#da532c">
+<meta name="theme-color" content="#ffffff">
+
 
 <!-- end custom head snippets -->
 
@@ -219,7 +226,7 @@
 </span>
         <div>
 <p><em>В этой статье объясняются основы того, какое влияение оказывают мышцы на боли в области головы и темени.</em>
-<img src="/images/articles/head/head-pain.jpg" alt="головная боль"></p>
+<img src="/assets/images/articles/head/head-pain.jpg" alt="головная боль"></p>
 
 </div>
       <div><a href="/articles/bol-v-oblasti-temeny/" class="read-more btn btn--info">Читать дальше</a></div>
@@ -233,11 +240,11 @@
 
 
 
-  менее 1 мин на чтение
+  1 мин на чтение
 </span>
         <div>
 <p><em>В этой статье представлены различные диагностические категории хронической головной боли, боли в области лица, ротовой полости и шеи и подробно изложено, какие заболевания могут характеризоваться сочетанием определенных симптомов с миофасциальной болью.</em>
-<img src="/images/articles/head/diagnostika.jpg" alt="головная боль"></p>
+<img src="/assets/images/articles/head/diagnostika.jpg" alt="головная боль"></p>
 
 </div>
       <div><a href="/articles/diagnosticheskie-kategorii/" class="read-more btn btn--info">Читать дальше</a></div>
