--- a/diety/index.html
+++ b/diety/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
 
 <!-- begin _includes/seo.html --><title>Диеты о здоровье</title>
-<meta name="description" content="A flexible Jekyll theme for your blog or site with a minimalist aesthetic.">
+<meta name="description" content="О здоровье и травмах, а так же о лечении и выявлении вредных длительно действующих фаторах.">
 
 
 
@@ -24,7 +24,7 @@
 
   <meta name="twitter:site" content="@mmistakes">
   <meta name="twitter:title" content="Диеты о здоровье">
-  <meta name="twitter:description" content="A flexible Jekyll theme for your blog or site with a minimalist aesthetic.">
+  <meta name="twitter:description" content="О здоровье и травмах, а так же о лечении и выявлении вредных длительно действующих фаторах.">
   <meta name="twitter:url" content="https://simptomy-i-lechenie.github.io/diety/">
 
   
@@ -207,6 +207,42 @@
 
 <!-- <h3 class="archive__subtitle">Свежие записи </h3> -->
 
+
+
+      <article class="post archive__item-excerpt">
+
+      <h1><a href="/faktory/uvlazhnitel/">Увлажнитель воздуха -  как выбрать лучший для квартиры (2019)</a></h1>
+	  	<span class="page__meta"><i class="far fa-clock" aria-hidden="true"></i> 
+
+
+
+
+  3 мин на чтение
+</span>
+        <p><em>Рассмотрите достоинства и недостатки четырех методов увлажнения, чтобы выбрать метод увлажнения, который соответствует вашей цели.</em>
+<img src="/assets/images/factory/vozduh/uvlazhnitel.jpg" alt="влажность воздуха"></p>
+
+
+      <a href="/faktory/uvlazhnitel/" class="read-more btn btn--info">Читать дальше</a>
+    </article>
+
+
+      <article class="post archive__item-excerpt">
+
+      <h1><a href="/faktory/vlajnost-vozduha/">Какая Влажность должна быть в Квартире (обновлено, 2019)</a></h1>
+	  	<span class="page__meta"><i class="far fa-clock" aria-hidden="true"></i> 
+
+
+
+
+  2 мин на чтение
+</span>
+        <p><em>В этой статье мы объясним проблемы и влияние недостатка влажности для здоровья человека.</em>
+<img src="/assets/images/factory/vozduh/vlajnost-vozduha.jpg" alt="влажность воздуха"></p>
+
+
+      <a href="/faktory/vlajnost-vozduha/" class="read-more btn btn--info">Читать дальше</a>
+    </article>
 
 
 
