--- a/video/index.html
+++ b/video/index.html
@@ -158,7 +158,7 @@
     <div class="masthead__menu">
       <nav id="site-nav" class="greedy-nav">
         
-        <a class="site-title" href="/">Симптомы и лечение</a>
+        <i class="fas fa-medkit"></i><a class="site-title" href="/">Симптомы и лечение</a>
         <ul class="visible-links"><li class="masthead__menu-item">
               <a href="/articles/" >Статьи</a>
             </li><li class="masthead__menu-item">
@@ -211,7 +211,7 @@
 
       <article class="post archive__item-excerpt">
 
-      <h1><a href="/faktory/uvlazhnitel/">Увлажнитель воздуха -  как выбрать лучший для квартиры (2019)</a></h1>
+      <h1><a href="/faktory/uvlazhnitel/">Как выбрать лучший увлажнитель воздуха для квартиры</a></h1>
 	  	<span class="page__meta"><i class="far fa-clock" aria-hidden="true"></i> 
 
 
@@ -229,7 +229,7 @@
 
       <article class="post archive__item-excerpt">
 
-      <h1><a href="/faktory/vlajnost-vozduha/">Какая Влажность должна быть в Квартире (обновлено, 2019)</a></h1>
+      <h1><a href="/faktory/vlajnost-vozduha/">Какая Влажность должна быть в Квартире</a></h1>
 	  	<span class="page__meta"><i class="far fa-clock" aria-hidden="true"></i> 
 
 
@@ -248,8 +248,13 @@
 
 
 
+
+
   </div>
+
 </div>
+
+
     </div>
 
     
@@ -295,9 +300,13 @@
   -->
 </div>
 
-<div class="page__footer-copyright">&copy; 2019 Селизовский Владимир Васильевич. </div>
+<div class="page__footer-copyright">&copy; 2020 Селизовский Владимир Васильевич. </div>
 <div class="page__footer-copyright">
-<a href="/legal/terms/">Условия и политика конфиденциальности</a>
+<p><a href="/legal/terms/">Условия и политика конфиденциальности</a></p>
+<p><a href="#" class="back_to_top">Наверх</a></p>
+<p><a href="/about/" class="back_to_top">Свяжитесь с нами! (Авторы)</a></p>
+<p class="diclamer">
+</p>
 </div>
 
       </footer>
