--- a/page2/index.html
+++ b/page2/index.html
@@ -214,6 +214,63 @@
 
 
     <article class="post archive__item-excerpt">
+      <h1><a href="/articles/ustranenie-boli-golovy-i-shei/">Устранение хронической головной боли, шеи и плеч,  обусловленной миофасциальными триггерными точками</a></h1>
+	  	<span class="page__meta"><i class="far fa-clock" aria-hidden="true"></i> 
+
+
+
+
+  11 мин на чтение
+</span>
+		<span class="page__meta right"><i class="far fa-calendar-alt"></i> 06/11/2019</span>
+        <div>
+<p><em>В этой статье объясняются основы того, какое влияение оказывают мышцы на боли в области головы и шеи.</em>
+<img src="/assets/images/articles/head/head-pain5.jpg" alt="головная боль"></p>
+
+</div>
+      <div><a href="/articles/ustranenie-boli-golovy-i-shei/" class="read-more btn btn--info">Читать дальше</a></div>
+    </article>
+
+
+    <article class="post archive__item-excerpt">
+      <h1><a href="/articles/uprazhneniya-dlya-horoshej-osanki/">Упражнения для хорошей осанки в области шеи и головы</a></h1>
+	  	<span class="page__meta"><i class="far fa-clock" aria-hidden="true"></i> 
+
+
+
+
+  8 мин на чтение
+</span>
+		<span class="page__meta right"><i class="far fa-calendar-alt"></i> 06/11/2019</span>
+        <div>
+<p><em>Основная цель этих упражнений — помочь восстановить нормальное положение верхнего плечевого пояса, устранить грудной кифоз, а также придать нормальное положение голове.</em>
+<img src="/assets/images/articles/head/osanka.jpg" alt="головная боль"></p>
+
+</div>
+      <div><a href="/articles/uprazhneniya-dlya-horoshej-osanki/" class="read-more btn btn--info">Читать дальше</a></div>
+    </article>
+
+
+    <article class="post archive__item-excerpt">
+      <h1><a href="/articles/opredelenie-boli/">Определение боли, количественный и визуальный метод</a></h1>
+	  	<span class="page__meta"><i class="far fa-clock" aria-hidden="true"></i> 
+
+
+
+
+  3 мин на чтение
+</span>
+		<span class="page__meta right"><i class="far fa-calendar-alt"></i> 06/11/2019</span>
+        <div>
+<p><em>В этой статье объясняются основы того, как определить боль.</em>
+<img src="/assets/images/articles/head/bol.jpg" alt="головная боль"></p>
+
+</div>
+      <div><a href="/articles/opredelenie-boli/" class="read-more btn btn--info">Читать дальше</a></div>
+    </article>
+
+
+    <article class="post archive__item-excerpt">
       <h1><a href="/articles/lechenie-visochno-nizhnechelyustnogo-sustava/">Логическое обоснование лечения заболеваний височно-нижнечелюстного сустава</a></h1>
 	  	<span class="page__meta"><i class="far fa-clock" aria-hidden="true"></i> 
 
@@ -343,63 +400,6 @@
 
 </div>
       <div><a href="/articles/golovnaya-bol-zabolevaniya-cherepa/" class="read-more btn btn--info">Читать дальше</a></div>
-    </article>
-
-
-    <article class="post archive__item-excerpt">
-      <h1><a href="/articles/golovnaya-bol-putevoditel/">Головная боль - путеводитель по пораженным мышцам</a></h1>
-	  	<span class="page__meta"><i class="far fa-clock" aria-hidden="true"></i> 
-
-
-
-
-  1 мин на чтение
-</span>
-		<span class="page__meta right"><i class="far fa-calendar-alt"></i> 06/07/2019</span>
-        <div>
-<p><em>В этой статье объясняются основы того, какое влияение оказывают мышцы на боли в области головы и темени.</em>
-<img src="/assets/images/articles/head/head-pain.jpg" alt="головная боль"></p>
-
-</div>
-      <div><a href="/articles/golovnaya-bol-putevoditel/" class="read-more btn btn--info">Читать дальше</a></div>
-    </article>
-
-
-    <article class="post archive__item-excerpt">
-      <h1><a href="/articles/golovnaya-bol-priemom-veshchestv/">Головная боль, обусловленная приемом различных субстанций, и при синдроме отмены</a></h1>
-	  	<span class="page__meta"><i class="far fa-clock" aria-hidden="true"></i> 
-
-
-
-
-  менее 1 мин на чтение
-</span>
-		<span class="page__meta right"><i class="far fa-calendar-alt"></i> 06/07/2019</span>
-        <div>
-<p><em>Подобная головная боль появляется в результате чрезмерного употребления симптоматических медикаментов, таких как аспирин, парацетамол, нестероидные противовоспалительные средства или препараты спорыньи.</em>
-<img src="/assets/images/articles/head/priemom-veshchestv.jpg" alt="головная боль"></p>
-
-</div>
-      <div><a href="/articles/golovnaya-bol-priemom-veshchestv/" class="read-more btn btn--info">Читать дальше</a></div>
-    </article>
-
-
-    <article class="post archive__item-excerpt">
-      <h1><a href="/articles/gisgaminovaya-golovnaya-bol/">«Гисгаминовая» головная боль и хроническая пароксизмальная гемикрания</a></h1>
-	  	<span class="page__meta"><i class="far fa-clock" aria-hidden="true"></i> 
-
-
-
-
-  2 мин на чтение
-</span>
-		<span class="page__meta right"><i class="far fa-calendar-alt"></i> 06/07/2019</span>
-        <div>
-<p><em>Головная боль обоих видов характеризуется некоторыми клиническими проявлениями, включая локализацию, качество, интенсивность и односторонность боли в сочетании с вегетативными феноменами и перемежающейся природой, отдельными приступами головной боли, длящейся от нескольких минут до нескольких часов.</em>
-<img src="/assets/images/articles/head/gisgaminovaya-golovnaya-bol.jpg" alt="Гисгаминовая головная боль"></p>
-
-</div>
-      <div><a href="/articles/gisgaminovaya-golovnaya-bol/" class="read-more btn btn--info">Читать дальше</a></div>
     </article>
 
 
