--- a/index.html
+++ b/index.html
@@ -143,8 +143,6 @@
 <meta name="theme-color" content="#ffffff">
 
 
-<meta name="yandex-verification" content="2e5d93613ceed981" />
-
 <!-- end custom head snippets -->
 
   </head>
@@ -164,6 +162,8 @@
         
         <i class="fas fa-medkit"></i><a class="site-title" href="/">Симптомы и лечение</a>
         <ul class="visible-links"><li class="masthead__menu-item">
+              <a href="/gemorroj/" >Геморрой</a>
+            </li><li class="masthead__menu-item">
               <a href="/articles/" >Статьи</a>
             </li><li class="masthead__menu-item">
               <a href="/video/" >Видео</a>
@@ -229,6 +229,44 @@
 
 </div>
       <div><a href="/gemorroj/gemorroj/" class="read-more btn btn--info">Читать дальше</a></div>
+    </article>
+
+
+    <article class="post archive__item-excerpt">
+      <h1><a href="/gemorroj/sidet/">Правильное сидение [для лечения геморроя]</a></h1>
+	  	<span class="page__meta"><i class="far fa-clock" aria-hidden="true"></i> 
+
+
+
+
+  менее 1 мин на чтение
+</span>
+		<span class="page__meta right"><i class="far fa-calendar-alt"></i> 05/19/2020</span>
+        <div>
+<p><em>Полное и окончательное избавление от геморроя возможно лишь наладив правильное питание</em>
+<img src="/assets/images/articles/gemorroj/sidet.jpg" alt="sidet"></p>
+
+</div>
+      <div><a href="/gemorroj/sidet/" class="read-more btn btn--info">Читать дальше</a></div>
+    </article>
+
+
+    <article class="post archive__item-excerpt">
+      <h1><a href="/gemorroj/led/">Лед [для лечения геморроя]</a></h1>
+	  	<span class="page__meta"><i class="far fa-clock" aria-hidden="true"></i> 
+
+
+
+
+  менее 1 мин на чтение
+</span>
+		<span class="page__meta right"><i class="far fa-calendar-alt"></i> 05/19/2020</span>
+        <div>
+<p><em>Полное и окончательное избавление от геморроя возможно лишь наладив правильное питание</em>
+<img src="/assets/images/articles/gemorroj/led.jpg" alt="Поднятие тяжестей"></p>
+
+</div>
+      <div><a href="/gemorroj/led/" class="read-more btn btn--info">Читать дальше</a></div>
     </article>
 
 
@@ -362,44 +400,6 @@
 
 </div>
       <div><a href="/gemorroj/bad-factors/" class="read-more btn btn--info">Читать дальше</a></div>
-    </article>
-
-
-    <article class="post archive__item-excerpt">
-      <h1><a href="/gemorroj/bad-defekacion/">Геморрой и Неправильная дефекация[самый вредный фактор]</a></h1>
-	  	<span class="page__meta"><i class="far fa-clock" aria-hidden="true"></i> 
-
-
-
-
-  менее 1 мин на чтение
-</span>
-		<span class="page__meta right"><i class="far fa-calendar-alt"></i> 05/17/2020</span>
-        <div>
-<p><em>Полное и окончательное избавление от геморроя возможно лишь, устранив все вредные факторы.</em>
-<img src="/assets/images/articles/gemorroj/kal4.png" alt="запор при геморрое"></p>
-
-</div>
-      <div><a href="/gemorroj/bad-defekacion/" class="read-more btn btn--info">Читать дальше</a></div>
-    </article>
-
-
-    <article class="post archive__item-excerpt">
-      <h1><a href="/gemorroj/zapor/">Запоры при геморрое [лечение геморроя]</a></h1>
-	  	<span class="page__meta"><i class="far fa-clock" aria-hidden="true"></i> 
-
-
-
-
-  менее 1 мин на чтение
-</span>
-		<span class="page__meta right"><i class="far fa-calendar-alt"></i> 05/17/2020</span>
-        <div>
-<p><em>Полное и окончательное избавление от геморроя возможно лишь, устранив хронические и периодические запоры!</em>
-<img src="/assets/images/articles/gemorroj/kal.jpg" alt="запор при геморрое"></p>
-
-</div>
-      <div><a href="/gemorroj/zapor/" class="read-more btn btn--info">Читать дальше</a></div>
     </article>
 
 
