--- a/page2/index.html
+++ b/page2/index.html
@@ -145,8 +145,6 @@
 <meta name="theme-color" content="#ffffff">
 
 
-<meta name="yandex-verification" content="2e5d93613ceed981" />
-
 <!-- end custom head snippets -->
 
   </head>
@@ -166,6 +164,8 @@
         
         <i class="fas fa-medkit"></i><a class="site-title" href="/">Симптомы и лечение</a>
         <ul class="visible-links"><li class="masthead__menu-item">
+              <a href="/gemorroj/" >Геморрой</a>
+            </li><li class="masthead__menu-item">
               <a href="/articles/" >Статьи</a>
             </li><li class="masthead__menu-item">
               <a href="/video/" >Видео</a>
@@ -213,6 +213,44 @@
 
 <h3 class="archive__subtitle">Свежие записи</h3>
 
+
+
+    <article class="post archive__item-excerpt">
+      <h1><a href="/gemorroj/bad-defekacion/">Геморрой и Неправильная дефекация[самый вредный фактор]</a></h1>
+	  	<span class="page__meta"><i class="far fa-clock" aria-hidden="true"></i> 
+
+
+
+
+  менее 1 мин на чтение
+</span>
+		<span class="page__meta right"><i class="far fa-calendar-alt"></i> 05/17/2020</span>
+        <div>
+<p><em>Полное и окончательное избавление от геморроя возможно лишь, устранив все вредные факторы.</em>
+<img src="/assets/images/articles/gemorroj/kal4.png" alt="запор при геморрое"></p>
+
+</div>
+      <div><a href="/gemorroj/bad-defekacion/" class="read-more btn btn--info">Читать дальше</a></div>
+    </article>
+
+
+    <article class="post archive__item-excerpt">
+      <h1><a href="/gemorroj/zapor/">Запоры при геморрое [лечение геморроя]</a></h1>
+	  	<span class="page__meta"><i class="far fa-clock" aria-hidden="true"></i> 
+
+
+
+
+  менее 1 мин на чтение
+</span>
+		<span class="page__meta right"><i class="far fa-calendar-alt"></i> 05/17/2020</span>
+        <div>
+<p><em>Полное и окончательное избавление от геморроя возможно лишь, устранив хронические и периодические запоры!</em>
+<img src="/assets/images/articles/gemorroj/kal.jpg" alt="запор при геморрое"></p>
+
+</div>
+      <div><a href="/gemorroj/zapor/" class="read-more btn btn--info">Читать дальше</a></div>
+    </article>
 
 
     <article class="post archive__item-excerpt">
@@ -311,25 +349,6 @@
 
 
     <article class="post archive__item-excerpt">
-      <h1><a href="/poyasnica/bol-v-poyasnice/">Избавление от боли в пояснице. Методы, которые действительно работают</a></h1>
-	  	<span class="page__meta"><i class="far fa-clock" aria-hidden="true"></i> 
-
-
-
-
-  1 мин на чтение
-</span>
-		<span class="page__meta right"><i class="far fa-calendar-alt"></i> 06/17/2019</span>
-        <div>
-<p><em>Полное и окончательное избавление от боли в области поясницы и нижних конечностей.</em>
-<img src="/assets/images/articles/poyasnica/poyasnica.jpg" alt="боль в пояснице"></p>
-
-</div>
-      <div><a href="/poyasnica/bol-v-poyasnice/" class="read-more btn btn--info">Читать дальше</a></div>
-    </article>
-
-
-    <article class="post archive__item-excerpt">
       <h1><a href="/poyasnica/osanka/">Правильная осанка для избавления от болей в посянице</a></h1>
 	  	<span class="page__meta"><i class="far fa-clock" aria-hidden="true"></i> 
 
@@ -349,6 +368,25 @@
 
 
     <article class="post archive__item-excerpt">
+      <h1><a href="/poyasnica/bol-v-poyasnice/">Избавление от боли в пояснице. Методы, которые действительно работают</a></h1>
+	  	<span class="page__meta"><i class="far fa-clock" aria-hidden="true"></i> 
+
+
+
+
+  1 мин на чтение
+</span>
+		<span class="page__meta right"><i class="far fa-calendar-alt"></i> 06/17/2019</span>
+        <div>
+<p><em>Полное и окончательное избавление от боли в области поясницы и нижних конечностей.</em>
+<img src="/assets/images/articles/poyasnica/poyasnica.jpg" alt="боль в пояснице"></p>
+
+</div>
+      <div><a href="/poyasnica/bol-v-poyasnice/" class="read-more btn btn--info">Читать дальше</a></div>
+    </article>
+
+
+    <article class="post archive__item-excerpt">
       <h1><a href="/articles/zagadka-boli-v-poyasnice/">Поясничные боли - проблема современного общества</a></h1>
 	  	<span class="page__meta"><i class="far fa-clock" aria-hidden="true"></i> 
 
@@ -364,44 +402,6 @@
 
 </div>
       <div><a href="/articles/zagadka-boli-v-poyasnice/" class="read-more btn btn--info">Читать дальше</a></div>
-    </article>
-
-
-    <article class="post archive__item-excerpt">
-      <h1><a href="/articles/trapeciya-anatomiya/">Трапециевидная мышца - анатомия, миофасциальный синдром</a></h1>
-	  	<span class="page__meta"><i class="far fa-clock" aria-hidden="true"></i> 
-
-
-
-
-  1 мин на чтение
-</span>
-		<span class="page__meta right"><i class="far fa-calendar-alt"></i> 06/12/2019</span>
-        <div>
-<p><em>Верхняя, средняя и нижняя части трапециевидной мышцы характеризуются разным направлением волокон и часто обладают разными функциональными способностями и возможностями.</em>
-<img src="/assets/images/articles/trapeciya/trapeciya2.jpg" alt="Боль в верхней части спины"></p>
-
-</div>
-      <div><a href="/articles/trapeciya-anatomiya/" class="read-more btn btn--info">Читать дальше</a></div>
-    </article>
-
-
-    <article class="post archive__item-excerpt">
-      <h1><a href="/articles/trapeciya/">Боли в верхней части спины - трапециевидная мышца</a></h1>
-	  	<span class="page__meta"><i class="far fa-clock" aria-hidden="true"></i> 
-
-
-
-
-  8 мин на чтение
-</span>
-		<span class="page__meta right"><i class="far fa-calendar-alt"></i> 06/12/2019</span>
-        <div>
-<p><em>В этой статье объясняются основы того, какое влияение оказывают мышцы на боли в области головы и темени.</em>
-<img src="/assets/images/articles/trapeciya/trapeciya.jpg" alt="Боль в верхней части спины"></p>
-
-</div>
-      <div><a href="/articles/trapeciya/" class="read-more btn btn--info">Читать дальше</a></div>
     </article>
 
 
