--- a/page4/index.html
+++ b/page4/index.html
@@ -143,8 +143,6 @@
 <meta name="theme-color" content="#ffffff">
 
 
-<meta name="yandex-verification" content="2e5d93613ceed981" />
-
 <!-- end custom head snippets -->
 
   </head>
@@ -164,6 +162,8 @@
         
         <i class="fas fa-medkit"></i><a class="site-title" href="/">Симптомы и лечение</a>
         <ul class="visible-links"><li class="masthead__menu-item">
+              <a href="/gemorroj/" >Геморрой</a>
+            </li><li class="masthead__menu-item">
               <a href="/articles/" >Статьи</a>
             </li><li class="masthead__menu-item">
               <a href="/video/" >Видео</a>
@@ -214,6 +214,44 @@
 
 
     <article class="post archive__item-excerpt">
+      <h1><a href="/articles/neklassificiruemye-tipy-shejnoj-i-golovnoj-boli/">Неклассифицируемые типы шейной и головной боли</a></h1>
+	  	<span class="page__meta"><i class="far fa-clock" aria-hidden="true"></i> 
+
+
+
+
+  1 мин на чтение
+</span>
+		<span class="page__meta right"><i class="far fa-calendar-alt"></i> 06/07/2019</span>
+        <div>
+<p><em>В эту категорию головной и шейной боли официально включены «некоторые типы головной боли, не удовлетворяющие критериям заболеваний, описанных Международным обществом по изучению боли в области головы».</em>
+<img src="/assets/images/articles/head/head-pain4.jpg" alt="головная боль"></p>
+
+</div>
+      <div><a href="/articles/neklassificiruemye-tipy-shejnoj-i-golovnoj-boli/" class="read-more btn btn--info">Читать дальше</a></div>
+    </article>
+
+
+    <article class="post archive__item-excerpt">
+      <h1><a href="/articles/kranialnaya-nevralgiya/">Краниальная невралгия, боль из нервного чувствительного ствола и дефферентная боль</a></h1>
+	  	<span class="page__meta"><i class="far fa-clock" aria-hidden="true"></i> 
+
+
+
+
+  3 мин на чтение
+</span>
+		<span class="page__meta right"><i class="far fa-calendar-alt"></i> 06/07/2019</span>
+        <div>
+<p><em>Эта боль характеризует нарушения, затрагивающие поврежденные нервы и функционально чувствительные компоненты некоторых черепных нервов, а также шейные нервы.</em>
+<img src="/assets/images/articles/head/nevralgiya.jpg" alt="головная боль"></p>
+
+</div>
+      <div><a href="/articles/kranialnaya-nevralgiya/" class="read-more btn btn--info">Читать дальше</a></div>
+    </article>
+
+
+    <article class="post archive__item-excerpt">
       <h1><a href="/articles/golovnaya-bol-zabolevaniya-cherepa/">Головная боль, боль в области лица и шеи на ночве заболеваний черепа</a></h1>
 	  	<span class="page__meta"><i class="far fa-clock" aria-hidden="true"></i> 
 
@@ -252,7 +290,7 @@
 
 
     <article class="post archive__item-excerpt">
-      <h1><a href="/articles/golovnaya-bol-priemom-veshchestv/">Головная боль, обусловленная приемом различных субстанций, и при синдроме отмены</a></h1>
+      <h1><a href="/diety/golovnaya-bol-priemom-veshchestv/">Головная боль, обусловленная приемом различных субстанций, и при синдроме отмены</a></h1>
 	  	<span class="page__meta"><i class="far fa-clock" aria-hidden="true"></i> 
 
 
@@ -266,7 +304,7 @@
 <img src="/assets/images/articles/head/priemom-veshchestv.jpg" alt="головная боль"></p>
 
 </div>
-      <div><a href="/articles/golovnaya-bol-priemom-veshchestv/" class="read-more btn btn--info">Читать дальше</a></div>
+      <div><a href="/diety/golovnaya-bol-priemom-veshchestv/" class="read-more btn btn--info">Читать дальше</a></div>
     </article>
 
 
