--- a/page3/index.html
+++ b/page3/index.html
@@ -145,8 +145,6 @@
 <meta name="theme-color" content="#ffffff">
 
 
-<meta name="yandex-verification" content="2e5d93613ceed981" />
-
 <!-- end custom head snippets -->
 
   </head>
@@ -166,6 +164,8 @@
         
         <i class="fas fa-medkit"></i><a class="site-title" href="/">Симптомы и лечение</a>
         <ul class="visible-links"><li class="masthead__menu-item">
+              <a href="/gemorroj/" >Геморрой</a>
+            </li><li class="masthead__menu-item">
               <a href="/articles/" >Статьи</a>
             </li><li class="masthead__menu-item">
               <a href="/video/" >Видео</a>
@@ -213,6 +213,44 @@
 
 <h3 class="archive__subtitle">Свежие записи</h3>
 
+
+
+    <article class="post archive__item-excerpt">
+      <h1><a href="/articles/trapeciya-anatomiya/">Трапециевидная мышца - анатомия, миофасциальный синдром</a></h1>
+	  	<span class="page__meta"><i class="far fa-clock" aria-hidden="true"></i> 
+
+
+
+
+  1 мин на чтение
+</span>
+		<span class="page__meta right"><i class="far fa-calendar-alt"></i> 06/12/2019</span>
+        <div>
+<p><em>Верхняя, средняя и нижняя части трапециевидной мышцы характеризуются разным направлением волокон и часто обладают разными функциональными способностями и возможностями.</em>
+<img src="/assets/images/articles/trapeciya/trapeciya2.jpg" alt="Боль в верхней части спины"></p>
+
+</div>
+      <div><a href="/articles/trapeciya-anatomiya/" class="read-more btn btn--info">Читать дальше</a></div>
+    </article>
+
+
+    <article class="post archive__item-excerpt">
+      <h1><a href="/articles/trapeciya/">Боли в верхней части спины - трапециевидная мышца</a></h1>
+	  	<span class="page__meta"><i class="far fa-clock" aria-hidden="true"></i> 
+
+
+
+
+  8 мин на чтение
+</span>
+		<span class="page__meta right"><i class="far fa-calendar-alt"></i> 06/12/2019</span>
+        <div>
+<p><em>В этой статье объясняются основы того, какое влияение оказывают мышцы на боли в области головы и темени.</em>
+<img src="/assets/images/articles/trapeciya/trapeciya.jpg" alt="Боль в верхней части спины"></p>
+
+</div>
+      <div><a href="/articles/trapeciya/" class="read-more btn btn--info">Читать дальше</a></div>
+    </article>
 
 
     <article class="post archive__item-excerpt">
@@ -364,44 +402,6 @@
 
 </div>
       <div><a href="/articles/cherennaya-travma/" class="read-more btn btn--info">Читать дальше</a></div>
-    </article>
-
-
-    <article class="post archive__item-excerpt">
-      <h1><a href="/articles/neklassificiruemye-tipy-shejnoj-i-golovnoj-boli/">Неклассифицируемые типы шейной и головной боли</a></h1>
-	  	<span class="page__meta"><i class="far fa-clock" aria-hidden="true"></i> 
-
-
-
-
-  1 мин на чтение
-</span>
-		<span class="page__meta right"><i class="far fa-calendar-alt"></i> 06/07/2019</span>
-        <div>
-<p><em>В эту категорию головной и шейной боли официально включены «некоторые типы головной боли, не удовлетворяющие критериям заболеваний, описанных Международным обществом по изучению боли в области головы».</em>
-<img src="/assets/images/articles/head/head-pain4.jpg" alt="головная боль"></p>
-
-</div>
-      <div><a href="/articles/neklassificiruemye-tipy-shejnoj-i-golovnoj-boli/" class="read-more btn btn--info">Читать дальше</a></div>
-    </article>
-
-
-    <article class="post archive__item-excerpt">
-      <h1><a href="/articles/kranialnaya-nevralgiya/">Краниальная невралгия, боль из нервного чувствительного ствола и дефферентная боль</a></h1>
-	  	<span class="page__meta"><i class="far fa-clock" aria-hidden="true"></i> 
-
-
-
-
-  3 мин на чтение
-</span>
-		<span class="page__meta right"><i class="far fa-calendar-alt"></i> 06/07/2019</span>
-        <div>
-<p><em>Эта боль характеризует нарушения, затрагивающие поврежденные нервы и функционально чувствительные компоненты некоторых черепных нервов, а также шейные нервы.</em>
-<img src="/assets/images/articles/head/nevralgiya.jpg" alt="головная боль"></p>
-
-</div>
-      <div><a href="/articles/kranialnaya-nevralgiya/" class="read-more btn btn--info">Читать дальше</a></div>
     </article>
 
 
