--- a/404.html
+++ b/404.html
@@ -13,26 +13,26 @@
 <meta property="og:locale" content="ru_RU">
 <meta property="og:site_name" content="Симптомы и лечение">
 <meta property="og:title" content="Страница не найдена">
-<meta property="og:url" content="http://localhost:4000/404.html">
+<meta property="og:url" content="https://simptomy-i-lechenie.github.io/404.html">
 
 
   <meta property="og:description" content="Страница не найдена">
 
 
 
-  <meta property="og:image" content="http://localhost:4000/assets/images/site-logo.png">
+  <meta property="og:image" content="https://simptomy-i-lechenie.github.io/assets/images/site-logo.png">
 
 
 
   <meta name="twitter:site" content="@mmistakes">
   <meta name="twitter:title" content="Страница не найдена">
   <meta name="twitter:description" content="Страница не найдена">
-  <meta name="twitter:url" content="http://localhost:4000/404.html">
+  <meta name="twitter:url" content="https://simptomy-i-lechenie.github.io/404.html">
 
   
     <meta name="twitter:card" content="summary">
     
-      <meta name="twitter:image" content="http://localhost:4000/assets/images/site-logo.png">
+      <meta name="twitter:image" content="https://simptomy-i-lechenie.github.io/assets/images/site-logo.png">
     
   
 
@@ -49,7 +49,7 @@
   
 
 
-<link rel="canonical" href="http://localhost:4000/404.html">
+<link rel="canonical" href="https://simptomy-i-lechenie.github.io/404.html">
 
 
 
@@ -59,8 +59,8 @@
     {
       "@context": "https://schema.org",
       "@type": "Organization",
-      "url": "http://localhost:4000",
-      "logo": "http://localhost:4000/assets/images/site-logo.png"
+      "url": "https://simptomy-i-lechenie.github.io",
+      "logo": "https://simptomy-i-lechenie.github.io/assets/images/site-logo.png"
     }
   </script>
 
@@ -71,7 +71,7 @@
       "@context": "https://schema.org",
       "@type": "Person",
       "name": "Селизовский Владимир Васильевич",
-      "url": "http://localhost:4000",
+      "url": "https://simptomy-i-lechenie.github.io",
       "sameAs": ["https://twitter.com/mmistakes","https://www.facebook.com/michaelrose"]
     }
   </script>
@@ -224,7 +224,7 @@
 
 <script>
   var GOOG_FIXURL_LANG = 'ru';
-  var GOOG_FIXURL_SITE = 'http://localhost:4000'
+  var GOOG_FIXURL_SITE = 'https://simptomy-i-lechenie.github.io'
 </script>
 
 <script src="https://linkhelp.clients.google.com/tbproxy/lh/wm/fixurl.js">
