--- a/faktory/uvlazhnitel/index.html
+++ b/faktory/uvlazhnitel/index.html
@@ -13,26 +13,26 @@
 <meta property="og:locale" content="ru_RU">
 <meta property="og:site_name" content="Симптомы и лечение">
 <meta property="og:title" content="Увлажнитель воздуха -  как выбрать лучший для квартиры [2020]">
-<meta property="og:url" content="http://localhost:4000/faktory/uvlazhnitel/">
+<meta property="og:url" content="https://simptomy-i-lechenie.github.io/faktory/uvlazhnitel/">
 
 
   <meta property="og:description" content="Рассмотрите достоинства и недостатки четырех методов увлажнения, чтобы выбрать метод увлажнения, который соответствует вашей цели.">
 
 
 
-  <meta property="og:image" content="http://localhost:4000/assets/images/thumbs/uvlazhnitel.jpg">
+  <meta property="og:image" content="https://simptomy-i-lechenie.github.io/assets/images/thumbs/uvlazhnitel.jpg">
 
 
 
   <meta name="twitter:site" content="@mmistakes">
   <meta name="twitter:title" content="Увлажнитель воздуха -  как выбрать лучший для квартиры [2020]">
   <meta name="twitter:description" content="Рассмотрите достоинства и недостатки четырех методов увлажнения, чтобы выбрать метод увлажнения, который соответствует вашей цели.">
-  <meta name="twitter:url" content="http://localhost:4000/faktory/uvlazhnitel/">
+  <meta name="twitter:url" content="https://simptomy-i-lechenie.github.io/faktory/uvlazhnitel/">
 
   
     <meta name="twitter:card" content="summary">
     
-      <meta name="twitter:image" content="http://localhost:4000/assets/images/thumbs/uvlazhnitel.jpg">
+      <meta name="twitter:image" content="https://simptomy-i-lechenie.github.io/assets/images/thumbs/uvlazhnitel.jpg">
     
   
 
@@ -51,7 +51,7 @@
   
 
 
-<link rel="canonical" href="http://localhost:4000/faktory/uvlazhnitel/">
+<link rel="canonical" href="https://simptomy-i-lechenie.github.io/faktory/uvlazhnitel/">
 
 
 
@@ -61,8 +61,8 @@
     {
       "@context": "https://schema.org",
       "@type": "Organization",
-      "url": "http://localhost:4000",
-      "logo": "http://localhost:4000/assets/images/site-logo.png"
+      "url": "https://simptomy-i-lechenie.github.io",
+      "logo": "https://simptomy-i-lechenie.github.io/assets/images/site-logo.png"
     }
   </script>
 
@@ -73,7 +73,7 @@
       "@context": "https://schema.org",
       "@type": "Person",
       "name": "Селизовский Владимир Васильевич",
-      "url": "http://localhost:4000",
+      "url": "https://simptomy-i-lechenie.github.io",
       "sameAs": ["https://twitter.com/mmistakes","https://www.facebook.com/michaelrose"]
     }
   </script>
