--- a/gemorroj/check-list/index.html
+++ b/gemorroj/check-list/index.html
@@ -13,26 +13,26 @@
 <meta property="og:locale" content="ru_RU">
 <meta property="og:site_name" content="Симптомы и лечение">
 <meta property="og:title" content="Список того, что нужно делать для избавления от геморроя">
-<meta property="og:url" content="http://localhost:4000/gemorroj/check-list/">
+<meta property="og:url" content="https://simptomy-i-lechenie.github.io/gemorroj/check-list/">
 
 
   <meta property="og:description" content="Перечислен перечень того, что нужно делать чтобы избавиться от геморроя">
 
 
 
-  <meta property="og:image" content="http://localhost:4000/assets/images/site-logo.png">
+  <meta property="og:image" content="https://simptomy-i-lechenie.github.io/assets/images/site-logo.png">
 
 
 
   <meta name="twitter:site" content="@mmistakes">
   <meta name="twitter:title" content="Список того, что нужно делать для избавления от геморроя">
   <meta name="twitter:description" content="Перечислен перечень того, что нужно делать чтобы избавиться от геморроя">
-  <meta name="twitter:url" content="http://localhost:4000/gemorroj/check-list/">
+  <meta name="twitter:url" content="https://simptomy-i-lechenie.github.io/gemorroj/check-list/">
 
   
     <meta name="twitter:card" content="summary">
     
-      <meta name="twitter:image" content="http://localhost:4000/assets/images/site-logo.png">
+      <meta name="twitter:image" content="https://simptomy-i-lechenie.github.io/assets/images/site-logo.png">
     
   
 
@@ -51,7 +51,7 @@
   
 
 
-<link rel="canonical" href="http://localhost:4000/gemorroj/check-list/">
+<link rel="canonical" href="https://simptomy-i-lechenie.github.io/gemorroj/check-list/">
 
 
 
@@ -61,8 +61,8 @@
     {
       "@context": "https://schema.org",
       "@type": "Organization",
-      "url": "http://localhost:4000",
-      "logo": "http://localhost:4000/assets/images/site-logo.png"
+      "url": "https://simptomy-i-lechenie.github.io",
+      "logo": "https://simptomy-i-lechenie.github.io/assets/images/site-logo.png"
     }
   </script>
 
@@ -73,7 +73,7 @@
       "@context": "https://schema.org",
       "@type": "Person",
       "name": "Селизовский Владимир Васильевич",
-      "url": "http://localhost:4000",
+      "url": "https://simptomy-i-lechenie.github.io",
       "sameAs": ["https://twitter.com/mmistakes","https://www.facebook.com/michaelrose"]
     }
   </script>
@@ -505,11 +505,11 @@
     <h4 class="page__share-title">Поделиться</h4>
   
 
-  <a href="https://twitter.com/intent/tweet?via=mmistakes&amp;text=%D0%A1%D0%BF%D0%B8%D1%81%D0%BE%D0%BA+%D1%82%D0%BE%D0%B3%D0%BE%2C+%D1%87%D1%82%D0%BE+%D0%BD%D1%83%D0%B6%D0%BD%D0%BE+%D0%B4%D0%B5%D0%BB%D0%B0%D1%82%D1%8C+%D0%B4%D0%BB%D1%8F+%D0%B8%D0%B7%D0%B1%D0%B0%D0%B2%D0%BB%D0%B5%D0%BD%D0%B8%D1%8F+%D0%BE%D1%82+%D0%B3%D0%B5%D0%BC%D0%BE%D1%80%D1%80%D0%BE%D1%8F%20http%3A%2F%2Flocalhost%3A4000%2Fgemorroj%2Fcheck-list%2F" class="btn btn--twitter" onclick="window.open(this.href, 'window', 'left=20,top=20,width=500,height=500,toolbar=1,resizable=0'); return false;" title="Поделиться Twitter" rel="nofollow noopener noreferrer" target="_blank"><i class="fab fa-fw fa-twitter" aria-hidden="true"></i><span> Twitter</span></a>
+  <a href="https://twitter.com/intent/tweet?via=mmistakes&amp;text=%D0%A1%D0%BF%D0%B8%D1%81%D0%BE%D0%BA+%D1%82%D0%BE%D0%B3%D0%BE%2C+%D1%87%D1%82%D0%BE+%D0%BD%D1%83%D0%B6%D0%BD%D0%BE+%D0%B4%D0%B5%D0%BB%D0%B0%D1%82%D1%8C+%D0%B4%D0%BB%D1%8F+%D0%B8%D0%B7%D0%B1%D0%B0%D0%B2%D0%BB%D0%B5%D0%BD%D0%B8%D1%8F+%D0%BE%D1%82+%D0%B3%D0%B5%D0%BC%D0%BE%D1%80%D1%80%D0%BE%D1%8F%20https%3A%2F%2Fsimptomy-i-lechenie.github.io%2Fgemorroj%2Fcheck-list%2F" class="btn btn--twitter" onclick="window.open(this.href, 'window', 'left=20,top=20,width=500,height=500,toolbar=1,resizable=0'); return false;" title="Поделиться Twitter" rel="nofollow noopener noreferrer" target="_blank"><i class="fab fa-fw fa-twitter" aria-hidden="true"></i><span> Twitter</span></a>
 
-  <a href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Flocalhost%3A4000%2Fgemorroj%2Fcheck-list%2F" class="btn btn--facebook" onclick="window.open(this.href, 'window', 'left=20,top=20,width=500,height=500,toolbar=1,resizable=0'); return false;" title="Поделиться Facebook" rel="nofollow noopener noreferrer" target="_blank"><i class="fab fa-fw fa-facebook" aria-hidden="true"></i><span> Facebook</span></a>
+  <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fsimptomy-i-lechenie.github.io%2Fgemorroj%2Fcheck-list%2F" class="btn btn--facebook" onclick="window.open(this.href, 'window', 'left=20,top=20,width=500,height=500,toolbar=1,resizable=0'); return false;" title="Поделиться Facebook" rel="nofollow noopener noreferrer" target="_blank"><i class="fab fa-fw fa-facebook" aria-hidden="true"></i><span> Facebook</span></a>
 
-  <a href="https://www.linkedin.com/shareArticle?mini=true&amp;url=http%3A%2F%2Flocalhost%3A4000%2Fgemorroj%2Fcheck-list%2F" class="btn btn--linkedin" onclick="window.open(this.href, 'window', 'left=20,top=20,width=500,height=500,toolbar=1,resizable=0'); return false;" title="Поделиться LinkedIn" rel="nofollow noopener noreferrer" target="_blank"><i class="fab fa-fw fa-linkedin" aria-hidden="true"></i><span> LinkedIn</span></a>
+  <a href="https://www.linkedin.com/shareArticle?mini=true&amp;url=https%3A%2F%2Fsimptomy-i-lechenie.github.io%2Fgemorroj%2Fcheck-list%2F" class="btn btn--linkedin" onclick="window.open(this.href, 'window', 'left=20,top=20,width=500,height=500,toolbar=1,resizable=0'); return false;" title="Поделиться LinkedIn" rel="nofollow noopener noreferrer" target="_blank"><i class="fab fa-fw fa-linkedin" aria-hidden="true"></i><span> LinkedIn</span></a>
 </section>
 
 
