--- a/about/index.html
+++ b/about/index.html
@@ -257,7 +257,7 @@
 
 <h3 id="связаться-с-нами">Связаться с нами</h3>
 
-<p><a href="mailto:mains.companies@gmail.com">mains.companies@gmail.com</a></p>
+<p><a href="mailto:itblog2019@gmail.com">itblog2019@gmail.com</a></p>
 
         
       </section>
