--- a/index.html
+++ b/index.html
@@ -214,6 +214,44 @@
 
 
     <article class="post archive__item-excerpt">
+      <h1><a href="/gemorroj/stul/">Какой должен быть стул [для лечения геморроя]</a></h1>
+	  	<span class="page__meta"><i class="far fa-clock" aria-hidden="true"></i> 
+
+
+
+
+  менее 1 мин на чтение
+</span>
+		<span class="page__meta right"><i class="far fa-calendar-alt"></i> 05/24/2020</span>
+        <div>
+<p><em>Упражнения помогут в борьбе с геморроем</em>
+<img src="/assets/images/articles/gemorroj/stul.jpg" alt="stul"></p>
+
+</div>
+      <div><a href="/gemorroj/stul/" class="read-more btn btn--info">Читать дальше</a></div>
+    </article>
+
+
+    <article class="post archive__item-excerpt">
+      <h1><a href="/gemorroj/uprajnenija/">Физические упражнения [для лечения геморроя]</a></h1>
+	  	<span class="page__meta"><i class="far fa-clock" aria-hidden="true"></i> 
+
+
+
+
+  3 мин на чтение
+</span>
+		<span class="page__meta right"><i class="far fa-calendar-alt"></i> 05/24/2020</span>
+        <div>
+<p><em>Эти 10 техник и упражнений для физиотерапевта тазового дна помогут вам в долгосрочной перспективе избавиться от геморроя.</em>
+<img src="/assets/images/articles/gemorroj/kegel.jpg" alt="kegel"></p>
+
+</div>
+      <div><a href="/gemorroj/uprajnenija/" class="read-more btn btn--info">Читать дальше</a></div>
+    </article>
+
+
+    <article class="post archive__item-excerpt">
       <h1><a href="/gemorroj/gemorroj/">Избавление от геморроя. Методы, которые действительно работают</a></h1>
 	  	<span class="page__meta"><i class="far fa-clock" aria-hidden="true"></i> 
 
@@ -296,7 +334,7 @@
 
 
 
-  менее 1 мин на чтение
+  1 мин на чтение
 </span>
 		<span class="page__meta right"><i class="far fa-calendar-alt"></i> 05/17/2020</span>
         <div>
@@ -362,44 +400,6 @@
 
 </div>
       <div><a href="/gemorroj/bad-pitanie/" class="read-more btn btn--info">Читать дальше</a></div>
-    </article>
-
-
-    <article class="post archive__item-excerpt">
-      <h1><a href="/gemorroj/bad-peregrev/">Перегрев области таза при геморрое [вредный фактор]</a></h1>
-	  	<span class="page__meta"><i class="far fa-clock" aria-hidden="true"></i> 
-
-
-
-
-  менее 1 мин на чтение
-</span>
-		<span class="page__meta right"><i class="far fa-calendar-alt"></i> 05/17/2020</span>
-        <div>
-<p><em>Полное и окончательное избавление от геморроя возможно лишь, устранив хронические и периодические запоры</em>
-<img src="/assets/images/articles/gemorroj/peregrwev.jpg" alt="Перегрев области таза при геморрое"></p>
-
-</div>
-      <div><a href="/gemorroj/bad-peregrev/" class="read-more btn btn--info">Читать дальше</a></div>
-    </article>
-
-
-    <article class="post archive__item-excerpt">
-      <h1><a href="/gemorroj/bad-factors/">Факторы, способствующие развитию геморроя</a></h1>
-	  	<span class="page__meta"><i class="far fa-clock" aria-hidden="true"></i> 
-
-
-
-
-  менее 1 мин на чтение
-</span>
-		<span class="page__meta right"><i class="far fa-calendar-alt"></i> 05/17/2020</span>
-        <div>
-<p><em>Полное и окончательное избавление от геморроя возможно лишь, устранив все вредные факторы.</em>
-<img src="/assets/images/articles/gemorroj/tuj.jpg" alt="Факторы, способствующие развитию геморроя"></p>
-
-</div>
-      <div><a href="/gemorroj/bad-factors/" class="read-more btn btn--info">Читать дальше</a></div>
     </article>
 
 
