--- a/page4/index.html
+++ b/page4/index.html
@@ -214,6 +214,44 @@
 
 
     <article class="post archive__item-excerpt">
+      <h1><a href="/faktory/uvlazhnitel/">Как выбрать лучший увлажнитель воздуха для квартиры</a></h1>
+	  	<span class="page__meta"><i class="far fa-clock" aria-hidden="true"></i> 
+
+
+
+
+  3 мин на чтение
+</span>
+		<span class="page__meta right"><i class="far fa-calendar-alt"></i> 06/09/2019</span>
+        <div>
+<p><em>Рассмотрите достоинства и недостатки четырех методов увлажнения, чтобы выбрать метод увлажнения, который соответствует вашей цели.</em>
+<img src="/assets/images/factory/vozduh/uvlazhnitel.jpg" alt="влажность воздуха"></p>
+
+</div>
+      <div><a href="/faktory/uvlazhnitel/" class="read-more btn btn--info">Читать дальше</a></div>
+    </article>
+
+
+    <article class="post archive__item-excerpt">
+      <h1><a href="/articles/cherennaya-travma/">Черепная травма как причина головной боли н боли в области шеи</a></h1>
+	  	<span class="page__meta"><i class="far fa-clock" aria-hidden="true"></i> 
+
+
+
+
+  1 мин на чтение
+</span>
+		<span class="page__meta right"><i class="far fa-calendar-alt"></i> 06/07/2019</span>
+        <div>
+<p><em>Головная боль и другие симптомы могут возникать после минимальной закрытой травмы головы с ушибом головного мозга или хлыстовых сгибательно-разгибательных повреждений без ушибов головного мозга.</em>
+<img src="/assets/images/articles/head/cherennaya-travma.jpg" alt="головная боль"></p>
+
+</div>
+      <div><a href="/articles/cherennaya-travma/" class="read-more btn btn--info">Читать дальше</a></div>
+    </article>
+
+
+    <article class="post archive__item-excerpt">
       <h1><a href="/articles/neklassificiruemye-tipy-shejnoj-i-golovnoj-boli/">Неклассифицируемые типы шейной и головной боли</a></h1>
 	  	<span class="page__meta"><i class="far fa-clock" aria-hidden="true"></i> 
 
