--- a/gemorroj/page2/index.html
+++ b/gemorroj/page2/index.html
@@ -215,6 +215,42 @@
 
       <article class="post archive__item-excerpt">
 
+      <h1><a href="/gemorroj/bad-peregrev/">Перегрев области таза при геморрое [вредный фактор]</a></h1>
+	  	<span class="page__meta"><i class="far fa-clock" aria-hidden="true"></i> 
+
+
+
+
+  менее 1 мин на чтение
+</span>
+        <p><em>Полное и окончательное избавление от геморроя возможно лишь, устранив хронические и периодические запоры</em>
+<img src="/assets/images/articles/gemorroj/peregrwev.jpg" alt="Перегрев области таза при геморрое"></p>
+
+
+      <a href="/gemorroj/bad-peregrev/" class="read-more btn btn--info">Читать дальше</a>
+    </article>
+
+
+      <article class="post archive__item-excerpt">
+
+      <h1><a href="/gemorroj/bad-factors/">Факторы, способствующие развитию геморроя</a></h1>
+	  	<span class="page__meta"><i class="far fa-clock" aria-hidden="true"></i> 
+
+
+
+
+  менее 1 мин на чтение
+</span>
+        <p><em>Полное и окончательное избавление от геморроя возможно лишь, устранив все вредные факторы.</em>
+<img src="/assets/images/articles/gemorroj/tuj.jpg" alt="Факторы, способствующие развитию геморроя"></p>
+
+
+      <a href="/gemorroj/bad-factors/" class="read-more btn btn--info">Читать дальше</a>
+    </article>
+
+
+      <article class="post archive__item-excerpt">
+
       <h1><a href="/gemorroj/bad-defekacion/">Геморрой и Неправильная дефекация[самый вредный фактор]</a></h1>
 	  	<span class="page__meta"><i class="far fa-clock" aria-hidden="true"></i> 
 
