--- a/page2/index.html
+++ b/page2/index.html
@@ -216,6 +216,44 @@
 
 
     <article class="post archive__item-excerpt">
+      <h1><a href="/gemorroj/bad-peregrev/">Перегрев области таза при геморрое [вредный фактор]</a></h1>
+	  	<span class="page__meta"><i class="far fa-clock" aria-hidden="true"></i> 
+
+
+
+
+  менее 1 мин на чтение
+</span>
+		<span class="page__meta right"><i class="far fa-calendar-alt"></i> 05/17/2020</span>
+        <div>
+<p><em>Полное и окончательное избавление от геморроя возможно лишь, устранив хронические и периодические запоры</em>
+<img src="/assets/images/articles/gemorroj/peregrwev.jpg" alt="Перегрев области таза при геморрое"></p>
+
+</div>
+      <div><a href="/gemorroj/bad-peregrev/" class="read-more btn btn--info">Читать дальше</a></div>
+    </article>
+
+
+    <article class="post archive__item-excerpt">
+      <h1><a href="/gemorroj/bad-factors/">Факторы, способствующие развитию геморроя</a></h1>
+	  	<span class="page__meta"><i class="far fa-clock" aria-hidden="true"></i> 
+
+
+
+
+  менее 1 мин на чтение
+</span>
+		<span class="page__meta right"><i class="far fa-calendar-alt"></i> 05/17/2020</span>
+        <div>
+<p><em>Полное и окончательное избавление от геморроя возможно лишь, устранив все вредные факторы.</em>
+<img src="/assets/images/articles/gemorroj/tuj.jpg" alt="Факторы, способствующие развитию геморроя"></p>
+
+</div>
+      <div><a href="/gemorroj/bad-factors/" class="read-more btn btn--info">Читать дальше</a></div>
+    </article>
+
+
+    <article class="post archive__item-excerpt">
       <h1><a href="/gemorroj/bad-defekacion/">Геморрой и Неправильная дефекация[самый вредный фактор]</a></h1>
 	  	<span class="page__meta"><i class="far fa-clock" aria-hidden="true"></i> 
 
@@ -364,44 +402,6 @@
 
 </div>
       <div><a href="/poyasnica/osanka/" class="read-more btn btn--info">Читать дальше</a></div>
-    </article>
-
-
-    <article class="post archive__item-excerpt">
-      <h1><a href="/poyasnica/bol-v-poyasnice/">Избавление от боли в пояснице. Методы, которые действительно работают</a></h1>
-	  	<span class="page__meta"><i class="far fa-clock" aria-hidden="true"></i> 
-
-
-
-
-  1 мин на чтение
-</span>
-		<span class="page__meta right"><i class="far fa-calendar-alt"></i> 06/17/2019</span>
-        <div>
-<p><em>Полное и окончательное избавление от боли в области поясницы и нижних конечностей.</em>
-<img src="/assets/images/articles/poyasnica/poyasnica.jpg" alt="боль в пояснице"></p>
-
-</div>
-      <div><a href="/poyasnica/bol-v-poyasnice/" class="read-more btn btn--info">Читать дальше</a></div>
-    </article>
-
-
-    <article class="post archive__item-excerpt">
-      <h1><a href="/articles/zagadka-boli-v-poyasnice/">Поясничные боли - проблема современного общества</a></h1>
-	  	<span class="page__meta"><i class="far fa-clock" aria-hidden="true"></i> 
-
-
-
-
-  2 мин на чтение
-</span>
-		<span class="page__meta right"><i class="far fa-calendar-alt"></i> 06/15/2019</span>
-        <div>
-<p><em>Рассматриваются причины возникновения боли в нижней части спины, которые часто не замечают при обследовании.</em>
-<img src="/assets/images/articles/poyasnica/poyasnica8.jpg" alt="боль в пояснице"></p>
-
-</div>
-      <div><a href="/articles/zagadka-boli-v-poyasnice/" class="read-more btn btn--info">Читать дальше</a></div>
     </article>
 
 
