--- a/page3/index.html
+++ b/page3/index.html
@@ -216,6 +216,44 @@
 
 
     <article class="post archive__item-excerpt">
+      <h1><a href="/poyasnica/bol-v-poyasnice/">Избавление от боли в пояснице. Методы, которые действительно работают</a></h1>
+	  	<span class="page__meta"><i class="far fa-clock" aria-hidden="true"></i> 
+
+
+
+
+  1 мин на чтение
+</span>
+		<span class="page__meta right"><i class="far fa-calendar-alt"></i> 06/17/2019</span>
+        <div>
+<p><em>Полное и окончательное избавление от боли в области поясницы и нижних конечностей.</em>
+<img src="/assets/images/articles/poyasnica/poyasnica.jpg" alt="боль в пояснице"></p>
+
+</div>
+      <div><a href="/poyasnica/bol-v-poyasnice/" class="read-more btn btn--info">Читать дальше</a></div>
+    </article>
+
+
+    <article class="post archive__item-excerpt">
+      <h1><a href="/articles/zagadka-boli-v-poyasnice/">Поясничные боли - проблема современного общества</a></h1>
+	  	<span class="page__meta"><i class="far fa-clock" aria-hidden="true"></i> 
+
+
+
+
+  2 мин на чтение
+</span>
+		<span class="page__meta right"><i class="far fa-calendar-alt"></i> 06/15/2019</span>
+        <div>
+<p><em>Рассматриваются причины возникновения боли в нижней части спины, которые часто не замечают при обследовании.</em>
+<img src="/assets/images/articles/poyasnica/poyasnica8.jpg" alt="боль в пояснице"></p>
+
+</div>
+      <div><a href="/articles/zagadka-boli-v-poyasnice/" class="read-more btn btn--info">Читать дальше</a></div>
+    </article>
+
+
+    <article class="post archive__item-excerpt">
       <h1><a href="/articles/trapeciya-anatomiya/">Трапециевидная мышца - анатомия, миофасциальный синдром</a></h1>
 	  	<span class="page__meta"><i class="far fa-clock" aria-hidden="true"></i> 
 
@@ -364,44 +402,6 @@
 
 </div>
       <div><a href="/faktory/vlajnost-vozduha/" class="read-more btn btn--info">Читать дальше</a></div>
-    </article>
-
-
-    <article class="post archive__item-excerpt">
-      <h1><a href="/faktory/uvlazhnitel/">Как выбрать лучший увлажнитель воздуха для квартиры</a></h1>
-	  	<span class="page__meta"><i class="far fa-clock" aria-hidden="true"></i> 
-
-
-
-
-  3 мин на чтение
-</span>
-		<span class="page__meta right"><i class="far fa-calendar-alt"></i> 06/09/2019</span>
-        <div>
-<p><em>Рассмотрите достоинства и недостатки четырех методов увлажнения, чтобы выбрать метод увлажнения, который соответствует вашей цели.</em>
-<img src="/assets/images/factory/vozduh/uvlazhnitel.jpg" alt="влажность воздуха"></p>
-
-</div>
-      <div><a href="/faktory/uvlazhnitel/" class="read-more btn btn--info">Читать дальше</a></div>
-    </article>
-
-
-    <article class="post archive__item-excerpt">
-      <h1><a href="/articles/cherennaya-travma/">Черепная травма как причина головной боли н боли в области шеи</a></h1>
-	  	<span class="page__meta"><i class="far fa-clock" aria-hidden="true"></i> 
-
-
-
-
-  1 мин на чтение
-</span>
-		<span class="page__meta right"><i class="far fa-calendar-alt"></i> 06/07/2019</span>
-        <div>
-<p><em>Головная боль и другие симптомы могут возникать после минимальной закрытой травмы головы с ушибом головного мозга или хлыстовых сгибательно-разгибательных повреждений без ушибов головного мозга.</em>
-<img src="/assets/images/articles/head/cherennaya-travma.jpg" alt="головная боль"></p>
-
-</div>
-      <div><a href="/articles/cherennaya-travma/" class="read-more btn btn--info">Читать дальше</a></div>
     </article>
 
 
